Moved deck generation to a separate class

--- a/client/play.ejs
+++ b/client/play.ejs
@@ -1,58 +1,11 @@
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Playing giphyXit</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/paper/bootstrap.min.css" crossorigin="anonymous">
-        <style>
-        .panel-center {
-            max-width: 400px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        textarea {
-            width: 100%;
-            resize: none;
-        }
-        .card {
-            margin: 5px;
-            width: 210px;
-            box-sizing: border-box;
-            display: inline-block;
-
-            border-color: rgba(0, 0, 0, 0);
-            border-style: solid;
-            border-width: 2px;
-            vertical-align: top;
-        }
-        .card > .panel-body {
-            padding: 3px;
-        }
-        .card > .panel-body > img {
-            display: block;
-            width: 200px;
-        }
-
-
-        .card.active {
-            border-color: #2196f3;
-        }
-        .card.correct {
-            border-color: #4caf50;
-        }
-        .card.yours {
-            border-color: #9c27b0;
-        }
-        .card.wrong {
-            border-color: #e51c23;
-        }
-
-        .author-info {
-            font-size: medium;
-            margin-left: 5px;
-        }
-        .container-fluid {
-            padding-top: 10px;
-        }
-        </style>
+        <link rel="stylesheet" href="/style.css">
 
     </head>
     <body>
